# Supernote-Assistant

./: CMakeLists.txt  CMakeLists.txt.user.181c7ef  CMakeLists.txt.user.24a186a  FirstView.qml  PointEvent.h  README.md  SecondView.qml  export.cpp  export.h  httpclient.cpp  httpclient.h  main.cpp  main.qml  test.cpp  test.h  utils.cpp  utils.h
